# stm32f7xx-hal

./: .travis.yml  Cargo.toml  README.md
.cargo/: config
src/: gpio.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  timer.rs
