[package]
authors = ["Daniel Egger <daniel@eggers-club.de>", "Michael Hart <michael.hart1994@gmail.com>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32F7 series microcontrollers"
documentation = "https://docs.rs/stm32f7xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32f7xx",
    "hal",
]
license = "0BSD"
name = "stm32f7xx-hal"
readme = "README.md"
repository = "https://github.com/therealprof/stm32f7xx-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
nb = "0.1.1"
stm32f7 = "0.4.0"

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[features]
rt = ["stm32f7/rt"]
stm32f7x2 = ["stm32f7/stm32f7x2"]
stm32f7x3 = ["stm32f7/stm32f7x3"]
stm32f7x5 = ["stm32f7/stm32f7x5"]
stm32f7x6 = ["stm32f7/stm32f7x6"]
stm32f7x7 = ["stm32f7/stm32f7x7"]
stm32f7x9 = ["stm32f7/stm32f7x9"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
